fix: update flex-direction spacing for project_info component

--- a/src/pages/project_info/_project_info.scss
+++ b/src/pages/project_info/_project_info.scss
@@ -22,7 +22,7 @@
 }
 
 .project_info {
-  @include col.flex-direction(map.get(col.$spacing, "xl"));
+  @include col.flex-direction(map.get(col.$spacing, "xxl"));
 
   &__thumbnail {
     @include col.white_border();
